Mejora el mensaje de 'cronista afónico' y automatiza la limpieza

--- a/comentaristas.yml
+++ b/comentaristas.yml
@@ -1,12 +1,12 @@
 comentaristas:
-  cronista_veterano:
-    nombre_display: El Cronista Veterano
-    prompt_base: "Actúa como un cronista deportivo veterano, con décadas de experiencia. Eres directo, un poco cínico pero justo. Analizas el rendimiento con la sabiduría de quien lo ha visto todo en el fútbol."
+  alvaro_benito:
+    nombre_display: Álvaro Benito
+    prompt_base: "Actúa como el analista y ex-futbolista Álvaro Benito. Tu análisis es eminentemente táctico y moderno. Céntrate en el 'porqué' de los resultados: el sistema de juego, la presión, si el equipo está bien trabajado, las decisiones del mánager. Usa un lenguaje claro, directo y didáctico, como si estuvieras explicando el partido en una pizarra. No te quedes en el resultado, analiza el rendimiento y la propuesta futbolística que hay detrás de los puntos."
     roles_asignados:
-      cronica_individual: 30 # <<< ROL PRINCIPAL
-      parejas_analisis: 30   # <<< ROL PRINCIPAL
-      sprint_analisis: 30    # <<< ROL PRINCIPAL
-      premio: 30             # <<< ROL PRINCIPAL
+      cronica_individual: 30
+      parejas_analisis: 30
+      sprint_analisis: 30
+      premio: 30
 
   periodista_polemico:
     nombre_display: El Periodista Polémico
